--- a/client/src/Components/Homepage/body.css
+++ b/client/src/Components/Homepage/body.css
@@ -1,5 +1,5 @@
 .hero-main {
-    background: url("./hero_section/HS.jpg");
+    background: url("../../../public/hero_section/HS.jpg");
     margin-top: 4.5rem;
     background-repeat: no-repeat;
     background-position: center;
